# cnpy

./: CMakeLists.txt  cnpy.cpp  cnpy.h
cmake/: cnpyConfig.cmake.in
tests/: test_npz_writer.cpp
